--- a/Assignments/shinzman/Final/finalShield.css
+++ b/Assignments/shinzman/Final/finalShield.css
@@ -137,3 +137,21 @@ html, body
 {
 	padding-top: 5%;
 }
+.shadow1
+{
+	-webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.75);
+}
+.shadow2
+{
+	-webkit-box-shadow: 0px 0px 4px 4px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 4px 4px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 4px 4px rgba(0,0,0,0.75);
+}
+.shadow2:hover
+{
+	-webkit-box-shadow: 0px 0px 5px 5px rgba(224,148,163,1);
+	-moz-box-shadow: 0px 0px 5px 5px rgba(224,148,163,1);
+	box-shadow: 0px 0px 5px 5px rgba(224,148,163,1);
+}
